<resources>
    <string name="app_name">Twitter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btnLogin">Connect to Twitter</string>
    <string name="ivLoginBackground">background</string>
    <string name="tvLoginHello">Hello.</string>
    <string name="tvLoginWelcome">Welcome to Twitter.</string>
    <string name="title_activity_timeline">Home</string>
    <string name="tv_timeline_actionbar_title">Home</string>
    <string name="iv_timeline_actionbar_logo_description">Logo</string>
    <string name="action_compose">Compose</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="tv_compose_tweet_hint">What\'s happening?</string>
    <string name="btn_compose_tweet">Tweet</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_location">LocationActivity</string>
</resources>
