<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:id="@+id/btnLogin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:onClick="loginToRest"
        android:textSize="25sp"
        android:background="@layout/buttonshape"
        android:textColor="#33A0FF"
        android:textAllCaps="false"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ivLoginBackground"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/cheeringcroud"
        android:contentDescription="@string/ivLoginBackground"
        android:scaleType="center"
        android:adjustViewBounds="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvLoginHello"
        android:id="@+id/tvLoginHello"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvLoginWelcome"
        android:id="@+id/tvLoginWelcome"
        android:layout_below="@+id/tvLoginHello"
        android:layout_alignLeft="@+id/tvLoginHello"
        android:layout_alignStart="@+id/tvLoginHello"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>
