<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.varungupta.simpletwitterclient.Activity.ComposeActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_compose_actionbar_cancel"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/cancel"
                android:padding="15dp"
                android:contentDescription="@string/iv_timeline_actionbar_logo_description" />
            <TextView
                android:id="@+id/tv_compose_actionbar_char_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="140"
                android:gravity="center_vertical|right"
                android:textColor="#64000000"
                android:textSize="25sp"
                android:layout_toRightOf="@+id/iv_compose_actionbar_cancel"
                android:layout_toLeftOf="@+id/btn_compose_tweet"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_alignTop="@+id/iv_timeline_actionbar_logo"
                android:layout_alignBottom="@+id/iv_timeline_actionbar_logo" />
            <Button
                android:id="@+id/btn_compose_tweet"
                android:text="@string/btn_compose_tweet"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@layout/compose_button_tweet"
                android:layout_alignParentRight="true"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/rl_compose_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp">
        <ImageView
            android:id="@+id/iv_compose_user_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_compose_user_name"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/iv_compose_user_image"
            android:layout_toEndOf="@+id/iv_compose_user_image"
            android:textSize="20sp"
            android:maxLines="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_compose_user_handle"
            android:layout_toRightOf="@+id/iv_compose_user_image"
            android:layout_toEndOf="@+id/iv_compose_user_image"
            android:layout_below="@+id/tv_compose_user_name"
            android:textSize="15sp"
            android:maxLines="1"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/et_compose_tweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/rl_compose_topbar"
        android:hint="@string/tv_compose_tweet_hint"
        android:textSize="20sp"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:background="#00000000"
        android:layout_margin="10dp"
        android:maxLength="140"
        android:minHeight="40dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/iv_selected_image"
        android:layout_below="@+id/et_compose_tweet"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"/>
    <ImageView
        android:id="@+id/iv_cancel_selected_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_alignRight="@+id/iv_selected_image"
        android:layout_alignTop="@+id/iv_selected_image"
        android:src="@drawable/cancel"
        android:visibility="gone"
        android:onClick="removeSelectedImage"/>

    <GridView
        android:id="@+id/glGallery"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:numColumns="3"
        android:background="#000000">
    </GridView>
</RelativeLayout>
